--- a/package.json
+++ b/package.json
@@ -1,24 +1,25 @@
 {
-    "name": "markdown_preview",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "webpack": "^1.8.1",
-        "bootstrap": "^3.3.1",
-        "css-loader": "^0.9.0",
-        "ejs": "^2.3.1",
-        "ejs-loader": "^0.1.0",
-        "file-loader": "^0.8.1",
-        "imports-loader": "^0.6.3",
-        "jquery": "^2.1.1",
-        "style-loader": "^0.8.2",
-        "underscore": "^1.8.3",
-        "url-loader": "^0.5.5"
-    }
+  "name": "markdown_preview",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "bootstrap": "^3.3.1",
+    "css-loader": "^0.9.0",
+    "ejs": "^2.3.1",
+    "ejs-loader": "^0.1.0",
+    "file-loader": "^0.8.1",
+    "imports-loader": "^0.6.3",
+    "jquery": "^2.1.1",
+    "markdown": "^0.5.0",
+    "style-loader": "^0.8.2",
+    "underscore": "^1.8.3",
+    "url-loader": "^0.5.5",
+    "webpack": "^1.8.1"
+  }
 }
